# Distributed-Haskell

./: LICENSE  MR.cabal  README
src/: Distributed.hs  Main.hs  Pi6.hs  Storage.hi  Storage.hs  StoragePoly.hs  config  config_master  config_storage
src/Distributed/: Storage.hs
src/Distributed/Storage/: Common.hs  InMemory.hs  Simple.hs
src/Distributed/Storage/InMemory/: Client.hs  Server.hs
src/Storage/: Messages.hs  Polymorphic.hs  Simple.hs
src/Types/: Generic.hs
