name:           MR
version:        0.1
cabal-version:  >= 1.2
build-type:      Simple
data-files:     config_master, config_storage
data-dir:       src

executable MR
  
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base,
                   binary,
                   remote,
                   bytestring,
                   directory
  other-modules:   Distributed.Storage.Common, Distributed.Storage.InMemory.Client, Distributed.Storage.InMemory.Server
    
library
  hs-source-dirs:  src
  exposed-modules: Distributed.Storage, Distributed.Storage.Common,Distributed.Storage.InMemory.Client, Distributed.Storage.InMemory.Server
  other-modules:   Distributed.Storage.Simple
  
