name:           MR
version:        0.1
cabal-version:  >= 1.2
build-type:      Simple
data-files:     config_master, config_storage
data-dir:       src

executable MR
  
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base,
                   binary,
                   remote,
                   bytestring,
                   directory,
                   template-haskell
  other-modules:   Distributed.Storage,Distributed.Storage.Common,Distributed.Storage.InMemory,Distributed
    
library
  hs-source-dirs:  src
  exposed-modules: Distributed,Distributed.Storage,Distributed.Storage.InMemory
  other-modules:   Distributed.Storage.InMemory.Server,Distributed.Storage.Common
  
